--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
         "bootstrap": "^5.1.3",
         "firebase": "^9.6.10",
         "font-awesome": "^4.7.0",
+        "moment": "^2.29.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-fontawesome": "^1.7.1",
         "react-fontawesome-svg-icon": "^1.1.1",
         "react-icons": "^4.3.1",
+        "react-moment": "^1.1.1",
         "react-router-dom": "^6.2.2",
         "sweetalert2": "^11.4.8",
         "sweetalert2-react-content": "^4.2.0"
